# robocop_attendance

./: .gitignore  README.md  SCALABILITY_AND_HARDWARE.md  docker-compose.yml  progress.md  prompt.json  prompt_v2.json
backend/: Dockerfile  attendance.db  create_combined_video.py  create_test_video.py  generate_mock_students.py  pyproject.toml
backend/src/: admin_service.py  attendance.py  auth_service.py  database.py  dispute_service.py  embedding_loader.py  main.py  models.py  recognition.py  schemas.py  video_processor.py
backend/src/face_recognition_attendance_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AbsenteeList.jsx  AdminDashboard.jsx  AttendanceTable.jsx  Dashboard.jsx  DisputeList.jsx  LiveCorrectionPanel.jsx  Login.jsx  ProtectedRoute.jsx  RecognitionPanel.jsx  SessionEvidenceGallery.jsx  SessionHistory.jsx  StudentDashboard.jsx  UserMapper.jsx
