[project]
name = "face-recognition-attendance-backend"
version = "0.1.0"
description = "Backend for the Face Recognition Attendance System."
requires-python = "==3.9.*"
dependencies = [
    "fastapi>=0.100.0,<0.112.0",
    "uvicorn[standard]>=0.20.0,<0.30.0",
    "face-recognition==1.3.0",
    "numpy==1.24.4",
    "setuptools",
    "face-recognition-models @ git+https://github.com/ageitgey/face_recognition_models",
    "python-multipart",
    "opencv-python-headless",
    "sqlmodel",
    "passlib[argon2]",
    "python-jose[cryptography]"
]
